--- a/svg/index.css
+++ b/svg/index.css
@@ -29,3 +29,18 @@
   font-size: 24px;
   font-weight: 500;
 }
+
+.container {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+
+  font-family: "Saira";
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
